Removed hover effect on button and list items to avoid button staying black on mobile

--- a/index.css
+++ b/index.css
@@ -43,7 +43,6 @@ button {
 }
 
 button:hover {
-    background-color: #432000;
     cursor: pointer;
 }
 
@@ -66,6 +65,5 @@ ul li {
 }
 
 ul li:hover {
-    background-color: #FFECC7;
     cursor: pointer;
 }
